{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 144,
  "lineage": "f7eb3b11-d4b4-7544-cf4f-eb64480b7b35",
  "resources": [
    {
      "module": "module.locust_slaves",
      "mode": "managed",
      "type": "aws_instance",
      "name": "locust_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:962610896916:instance/i-0ffa415686b248af1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffa415686b248af1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1a80916ec98766d",
            "private_dns": "ip-10-0-1-60.ec2.internal",
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-54-242-128-140.compute-1.amazonaws.com",
            "public_ip": "54.242.128.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c2a5bb70e5c5428c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820f9f6e837bda7e",
            "tags": {
              "Name": "slave"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ef3c9369a7e0f69"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "module.locust_security_groups.aws_security_group.locust_slave",
            "module.locust_vpc.aws_subnet.locust",
            "module.locust_vpc.aws_vpc.locust"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:962610896916:instance/i-09b707d01533e7430",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b707d01533e7430",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-03cfddb07a647d654",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-3-89-233-252.compute-1.amazonaws.com",
            "public_ip": "3.89.233.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e6833ca8112b5037",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820f9f6e837bda7e",
            "tags": {
              "Name": "slave"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ef3c9369a7e0f69"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "module.locust_security_groups.aws_security_group.locust_slave",
            "module.locust_vpc.aws_subnet.locust",
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "locust_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:962610896916:instance/i-04981fe39b26c2006",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04981fe39b26c2006",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-09902f46116c01613",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-52-91-32-172.compute-1.amazonaws.com",
            "public_ip": "52.91.32.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0786ad3517f2da452",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820f9f6e837bda7e",
            "tags": {
              "Name": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000ef8e58d38171a8"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key",
            "module.locust_security_groups.aws_security_group.locust_master",
            "module.locust_vpc.aws_subnet.locust",
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "locust",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-000bb194fbb218862",
            "owner_id": "962610896916",
            "vpc_id": "vpc-03374feb370ebe45c"
          },
          "dependencies": [
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "locust_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-000bb194fbb218862",
            "id": "r-rtb-01e7e378fec4d39b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e7e378fec4d39b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.locust_vpc.aws_internet_gateway.locust",
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "locust_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962610896916:security-group/sg-000ef8e58d38171a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000ef8e58d38171a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP on Locust default port",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "master",
            "name_prefix": null,
            "owner_id": "962610896916",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03374feb370ebe45c"
          },
          "dependencies": [
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "locust_slave",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962610896916:security-group/sg-05ef3c9369a7e0f69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ef3c9369a7e0f69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "slave",
            "name_prefix": null,
            "owner_id": "962610896916",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03374feb370ebe45c"
          },
          "dependencies": [
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "locust",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962610896916:subnet/subnet-0820f9f6e837bda7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0820f9f6e837bda7e",
            "map_public_ip_on_launch": false,
            "owner_id": "962610896916",
            "vpc_id": "vpc-03374feb370ebe45c"
          },
          "dependencies": [
            "module.locust_vpc.aws_vpc.locust"
          ]
        }
      ]
    },
    {
      "module": "module.locust_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "locust",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962610896916:vpc/vpc-03374feb370ebe45c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-014575293463fa9fa",
            "default_route_table_id": "rtb-01e7e378fec4d39b4",
            "default_security_group_id": "sg-0d14278e39c3b38d0",
            "dhcp_options_id": "dopt-fd4d5f9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03374feb370ebe45c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e7e378fec4d39b4",
            "owner_id": "962610896916"
          }
        }
      ]
    }
  ]
}